2008-09-09 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	Fixed [ 2100911 ] getSchema.sh: line 17: [: =: unary operator expected
	(patch by Narasimha Sharoff)

2008-09-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, control.c, cimslpCMPI.c, sfcb.cfg.pre.in
	Fixed [ 1945390 ] Request for SLP service URL hostname override 
		Patch from Tyrel Datwyler

2008-09-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimslp.c cimslpCMPI.c:
	Fixed [ 2093273 ] Fix "cimomConfig" + myGetInstances memory leaks

2008-08-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c:
	Fixed [ 2023638 ] SFCB not considering UTC offset in calculating binary time
		Refix due to misinterpretation of the spec.

2008-08-20 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	Fixed [ 2062904 ] small memory leak after exportIndication

2008-08-19 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.h:
	Fixed [ 2060748 ] compile fails when --disable-debug configure flag is set

	* cimXmlGen.c:
	Fixed a compiler warning ("suggest parenthesis")
	
2008-08-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c:
	Fixed [ 2023638 ] SFCB not considering UTC offset in calculating binary time

2008-08-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	Fixed [ 2048875 ] sfcb silently crashes when sent certain EmbeddedObjects
	Fixed [ 2050421 ] Namespace not set for EmbeddedObjects in an XML value array

	* instance.c, objectImpl.c:
	Fixed [ 2048878 ] sfcb does not implement setObjectPath

	* cimXmlParser.c, cimXmlOps.y:
	Fixed [ 1918880 ] SFCB - Escaped XML sequences in embedded instances
	
2008-08-08 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2043672 ] Tighten SSL security for sfcb

	* cimXmlParser.c:
	Fixed [ 2025214 ] SFCB XML parser needs to unescape newlines

2008-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c: