@@ -18,6 +18,11 @@ https://sourceforge.net/tracker/?atid=712784&group_id=128809
 
 ********************************************************************************
 
+09/09/2008 by Alexander Dunfey, VMWare
+--------------------------------------
+[ 2100707 ] NULL properties in property list returned with value
+
+
 07/30/2008 by J. Bart Whitely, Novell
 -------------------------------------
 [ 2024019 ] SFCB can't handle large error messages
