@@ -41,6 +41,7 @@ Bugs fixed:
 - 2060748 compile fails when --disable-debug configure flag is set
 - 2062904 small memory leak after exportIndication
 - 2100911 getSchema.sh: line 17: [: =: unary operator expected
+- 2100707 NULL properties in property list returned with value
 
 Changes in 1.3.1
 ================
